--- a/src/pages/agendamentosAdm/index.scss
+++ b/src/pages/agendamentosAdm/index.scss
@@ -203,6 +203,26 @@
                 font-weight: 600;
                 font-style: normal;
             }
+            .sem-agendamentos{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                margin-top: 21dvh;
+                .sem-agenda{
+                    height: 12dvh;
+                    width: 12dvh;
+                }
+                p{
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 600;
+                    text-align: center;
+                    color: #8A37BB;
+                    font-size: 2dvh;
+                    width: 30dvh;
+                    margin-top: 2dvh;
+                }
+            }
             .cards {
                 background-color: #cfcfcf;
                 width: 65%;
