--- a/src/pages/inicial/index.scss
+++ b/src/pages/inicial/index.scss
@@ -629,11 +629,14 @@
                 display: flex ;
                 flex-direction: column;
                 margin-top: 0dvh;
+                transition: transform 1s ease;
+               
                 .configuracao{
                     text-decoration: none;
                     color: #ffff;
                     font-family: "Inter", serif;
                     font-size: 2.3dvh;
+                    margin-top: 1dvh;
                 }
                 .sair{
                     text-decoration: none;
@@ -643,8 +646,6 @@
                     margin-top: 2.3dvh;
                 }
             }
-            
-        
         }
     }
 
@@ -1043,10 +1044,6 @@
                         font-size: 2.3dvh;
                         margin-top: 2dvh;
                         gap: 1.4dvh;
-                        .p1{
-                        }
-                        .p2{
-                        }
                     }
                     .hora2{
                         font-size: 2.3dvh;
@@ -1306,6 +1303,7 @@
             }
         }
     }
+    
 }
 
 @media (max-width: 1120px) {
@@ -1737,7 +1735,46 @@
                 }
             }
         }
+        .modal {  
+            .modal-content {
+                top: 12%; 
+                left: 63%; 
+                padding: 20px;
+                height: 26dvh; 
+                width: 32dvh; 
+                max-width: 500px;
+                .informaceos{
+                    img{
+                        height: 7dvh;
+                        width: 7dvh;
+                        margin: 0dvh;
+                    }
+                    p{
+                        margin-top: 2.1dvh;
+                        font-size: 2.1dvh;
+                        margin-left: 1dvh;
+                    }
+                }
+                .linha2 {
+                    width: 100%;
+                    height: 1px; 
+                    margin-top: 9px;
+                }
+                .links{
+                    margin-top: 0dvh;; 
+                    .configuracao{
+                        font-size: 2.1dvh;
+                        margin-top: 1dvh;
+                    }
+                    .sair{
+                        font-size: 2.1dvh;
+                        margin-top: 2.3dvh;
+                    }
+                }
+            }
+        }
     }
+    
 }
 
 @media (max-width: 900px) {
@@ -1967,6 +2004,11 @@
                     
                 }
                 }
+            }
+        }
+        .modal {  
+            .modal-content {
+                left: 60%; 
             }
         }
     }
@@ -2199,6 +2241,44 @@
                 }
             }
         }
+        .modal {  
+            .modal-content {
+                top: 12%; 
+                left: 57%; 
+                padding: 20px;
+                height: 24dvh; 
+                width: 28dvh; 
+                max-width: 500px;
+                .informaceos{
+                    img{
+                        height: 7dvh;
+                        width: 7dvh;
+                        margin: 0dvh;
+                    }
+                    p{
+                        margin-top: 1dvh;
+                        font-size: 2.1dvh;
+                        margin-left: 1dvh;
+                    }
+                }
+                .linha2 {
+                    width: 100%;
+                    height: 1px; 
+                    margin-top: 9px;
+                }
+                .links{
+                    margin-top: 0dvh;; 
+                    .configuracao{
+                        font-size: 1.8dvh;
+                        margin-top: 1dvh;
+                    }
+                    .sair{
+                        font-size: 1.8dvh;
+                        margin-top: 2.3dvh;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -2419,6 +2499,44 @@
                     margin: 0.3dvh 0dvh 4dvh -24.3dvh;
                     font-size: 2dvh;
                 }
+                }
+            }
+        }
+        .modal {  
+            .modal-content {
+                top: 12%; 
+                left: 54%; 
+                padding: 20px;
+                height: 20dvh; 
+                width: 24dvh; 
+                max-width: 500px;
+                .informaceos{
+                    img{
+                        height: 5dvh;
+                        width: 5dvh;
+                        margin: 0dvh;
+                    }
+                    p{
+                        margin-top: 0.2dvh;
+                        font-size: 1.5dvh;
+                        margin-left: 1dvh;
+                    }
+                }
+                .linha2 {
+                    width: 100%;
+                    height: 1px; 
+                    margin-top: 9px;
+                }
+                .links{
+                    margin-top: 0dvh;; 
+                    .configuracao{
+                        font-size: 1.5dvh;
+                        margin-top: 1dvh;
+                    }
+                    .sair{
+                        font-size: 1.5dvh;
+                        margin-top: 2dvh;
+                    }
                 }
             }
         }
